<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">برق</string>
    <string name="last_news">آخر الأخبار</string>
    <string name="news_paper">صحف</string>
    <string name="magazine">مجلات</string>
    <string name="my_news">مصادري</string>
    <string name="setting">إعدادات</string>
    <string name="login">دخول</string>
    <string name="register">تسجيل</string>
    <string name="login_description">الرجاء تسجيل الدخول لتتمكن من حفظ مصادرك المفضلة وعرضها من أي جهاز آخر بمجرد تسجيل الدخول ..\n
	اذا لم يكن لديك حساب يمكنك التسجيل بسهولة الآن ..</string>
    <string name="modify_sources">تعديل المصادر</string>
    <string name="breaking_news_notifications">تنبيهات الأخبار العاجلة</string>
    <string name="notification">تلقي التنبيهات</string>
    <string name="notification_choose">اختيار نغمة التنبيهات</string>
    <string name="sound_notifications">أصوات التنبيهات</string>
    <string name="font_size">حجم الخط</string>
    <string name="font_type">نوع الخط</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="barq_app">تطبيق برق</string>
    <string name="barq_app_mark">\@BarqApp</string>
    <string name="s_facebook">برق فيسبوك</string>
    <string name="s_twitter">برق تويتر</string>
    <string name="s_instagram">برق انستغرام</string>
    <string name="s_linkedin">برق لينكد إن</string>
    <string name="rate_barq">تقييم التطبيق</string>
    <string name="suggest_source">اقتراح مصدر</string>
    <string name="report_bug">التنبيه عن خطأ</string>
    <string name="share">نشر</string>
    <string name="share_barq">نشر برق</string>
    <string name="share_with">نشر بواسطة …</string>
    <string name="share_with_whats_app">نشر بواسطة WhatsApp</string>
    <string name="share_with_facebook">نشر بواسطة Facebook</string>
    <string name="share_with_twitter">نشر بواسطة Twitter</string>
    <string name="share_with_instagram">نشر بواسطة Instagram</string>
    <string name="share_with_linked_in">نشر بواسطة LinkedIn</string>
    <string name="share_with_email">نشر بواسطة البريد</string>
    <string name="share_with_sms">نشر بواسطة رسالة SMS</string>
    <string name="share_content">تطبيق برق - آخبار العالم في مكان واحد\nحمل التطبيق مجاناً الإن:\nhttp://barq.news/download/</string>
    <string name="share_news">عبر تطبيق برق @BarqApp</string>
    <string name="logout">خروج</string>
    <string name="login_with_email">الدخول بواسطة البريد</string>
    <string name="login_with_facebook">الدخول بواسطة Facebook</string>
    <string name="login_with_twitter">الدخول بواسطة Twitter</string>
    <string name="login_with_google">الدخول بواسطة Google</string>
    <string name="register_with_email">التسجيل بواسطة البريد</string>
    <string name="register_with_facebook">التسجيل بواسطة Facebook</string>
    <string name="register_with_twitter">التسجيل بواسطة Twitter</string>
    <string name="register_with_google">التسجيل بواسطة Google</string>
    <string name="full_name">الاسم:</string>
    <string name="email_">البريد الالكتروني:</string>
    <string name="password_">كلمة المرور:</string>
    <string name="password">كلمة المرور</string>
    <string name="create_new_account">إنشاء حساب جديد</string>
    <string name="forgot_your_password"><u>هل نسيت كلمة المرور?</u></string>
    <string name="as_it_is_shown_in_the_comments">كما سيظهر في التعليقات</string>
    <string name="yourname_domain_com">yourname@domain.com</string>
    <string name="please_use_this_form_to_send_any_message_to_us">الرجاء استخدام النموذج التالي للتواصل معنا</string>
    <string name="name">الاسم</string>
    <string name="email">البريد الالكتروني</string>
    <string name="message">الرسالة</string>
    <string name="send">إرسال</string>
    <string name="you_can_suggest_any_source_to_add_it_to_the_list_of_sources_in_barq">نرحب باقتراحاتكم لإضافة أي مصدر إلى مصادر برق ..\n
	الرجاء تعبئة النموذج التالي ..\n
	وسوف نقوم بإضافته بعد معاينته ..</string>
    <string name="report_a_problem">الإبلاغ عن مشكلة</string>
    <string name="if_you_re_having_a_problem_with_barq_app">إذا كنت تواجه مشكلة مع تطبيق برق ،\n
    \nيمكنك إرسال تقرير برسالة الخطأ التي تظهر
    وسنقوم بمعالجة المشكلة .. يرجى استخدام هذا النموذج:
    </string>
    <string name="your_device">نظام التشغيل (IOS-Android)</string>
    <string name="error_message">رسالة الخطأ</string>
    <string name="error_details">تفاصيل الخطأ</string>
    <string name="source_name">اسم المصدر:</string>
    <string name="source_url">رابط المصدر:</string>
    <string name="add">إضافة +</string>
    <string name="reset_password">إعادة ضبط كلمة المرور</string>
    <string name="please_enter_your_email_to_reset_password">الرجاء إدخال بريدك الالكتروني لضبط كلمة المرور</string>
    <string name="bold">عريض</string>
    <string name="normal">متوسط</string>
    <string name="comment">التعليق…</string>
    <string name="be_the_first_who_comment_on_this_news">كن أول من يعلق على هذا الموضوع</string>
    <string name="no_sources_available">لم تقم باختيار مصادر حتى الآن!</string>
    <string name="no_news_available">لم يتم نشر أخبار مؤخراً من هذا المصدر !</string>
    <string name="please_add_new_sources_to_view_news_here">الرجاء إضافة مصادر من صفحة الإعدادات لكي تظهر هنا</string>
    <string name="edit_source">تحرير المصادر</string>
    <string name="my_sources">مصادري</string>
    <string name="tv_channels">قنوات تلفزيونية</string>
    <string name="web_sources">مواقع إنترنت</string>
    <string name="government">مواقع حكومية</string>
    <string name="sports_clubs">أندية رياضية</string>
    <string name="comment_information">التعليقات المنشورة لا تمثل رأي التطبيق ويمكن الإبلاغ عن أي تعليقات مسيئة من خلال النقر على أيقونة العلم تحت التعليق</string>
    <string name="you_cannot_do_this_action_at_your_comment">لايمكنك إجراء هذا الإجراء على تعليقاتك !</string>
    <string name="please_input_comment">الرجاء كتابة التعليق</string>
    <string name="you_have_to_login_or_signup">يجب تسجيل الدخول أولاً</string>
    <string name="day_ago">منذ يوم</string>
    <string name="_day_ago">منذ %1$s أيام</string>
    <string name="hour_ago">منذ ساعة</string>
    <string name="_hour_ago">منذ %1$s ساعات</string>
    <string name="minute_ago">منذ دقيقة</string>
    <string name="_minute_ago">منذ %1$s دقائق</string>
    <string name="just_ago">قبل قليل</string>
    <string name="email_invalid">عفواً البريد المدخل غير صحيح</string>
    <string name="url_invalid">عفواً الرابط المدخل غير صحيح</string>
    <string name="name_empty">الرجاء التأكد من كتابة الاسم</string>
    <string name="device_empty">الرجاء التأكد من كتابة نظام التشغيل</string>
    <string name="details_empty">الرجاء التأكد من كتابة تفاصيل</string>
    <string name="message_empty">الرجاء التأكد من كتابة الرسالة</string>
    <string name="password_empty">الرجاء التأكد من كتابة كلمة المرور</string>
    <string name="comment_empty">الرجاء التأكد من كتابة التعليق</string>
    <string name="message_sent_successfully">شكراً لك .. تم إرسال الرسالة بنجاح !</string>
    <string name="suggested_successfully">شكراً لك .. تم إرسال اقتراحك بنجاح !</string>
    <string name="reset_password_email_sent_successfully">تم إعادة ضبط كلمة المرور بنجاح!</string>
    <string name="search">بحث</string>
    <string name="search_my_sources">البحث في مصادري</string>
    <string name="search_all_sources">البحث في جميع المصادر</string>
    <string name="search_for_news">البحث عن الأخبار</string>
    <string name="_follower">متابع واحد</string>
    <string name="_followers">%1$d متابع</string>
    <string name="followers_">المتابعون %1$d</string>
    <string name="add_source">إضافة مصادر</string>
    <string name="no_result_found">لم يتم العثور على نتائج !</string>
    <string name="please_expand_your_search_to_find_more_results">الرجاء توسيع كلمات البحث للعثور على نتائج أكثر</string>
    <string name="my_favorite">مفضلتي</string>
    <string name="my_favorite_news">أخباري المفضلة</string>
    <string name="news_in_my_favorite">%1$d خبر في مفضلتي</string>
    <string name="you_don_t_have_any_news_in_your_favorite">لم تقم بإضافة أي أخبار إلى مفضلتك</string>
    <string name="to_add_news_to_your_favorite_click_on_star_on_top_bar_of_any_news">لإضافة أخبار إلى مفضلتك فقط اضغط على النجمة في الشريط أعلى أي خبر يعجبك</string>

    <string name="admob_id">ca-app-pub-1137588610425183~3179651433</string>
    <string name="facebook_app_id">356297428266183</string>
    <string name="fb_login_protocol_scheme">fb356297428266183</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">FxV6fZynvvv2DUIP1uS8YWYJP</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">MI8HOByBMIDVtCT1gxFQv6EEw7CYFnlclcrEHiFagQqNSTD20U</string>
</resources>
